--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -2,10 +2,22 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
 
-    script(src='https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js')
-  body
+    link(rel="stylesheet" stype="text/css" href="/assets/vendor/bootstrap-3.3.7/css/bootstrap.min.css")
+    link(rel="stylesheet" stype="text/css" href="/assets/vendor/adminlte-2.4.5/css/AdminLTE.min.css")
+    link(rel="stylesheet" stype="text/css" href="/assets/vendor/adminlte-2.4.5/css/skins/skin-blue.min.css")
+    link(rel="stylesheet" stype="text/css" href="/assets/vendor/font-awesome-4.7.0/css/font-awesome.min.css")
+
+    link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic")
+
+    script.
+      window['env'] = {"url":"https://dev.url.com"};
+
+  body.skin-blue
     block content
 
-    script(src='/javascripts/app.js')
+    script(type="text/javascript" src="assets/vendor/jquery-3.3.1.min.js")
+    script(type="text/javascript" src="assets/vendor/bootstrap-3.3.7/js/bootstrap.min.js")
+    script(type="text/javascript" src="assets/vendor/adminlte-2.4.5/js/adminlte.min.js")
+
+    script(type="text/javascript" src="assets/build.js")
