--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -10,14 +10,15 @@ html
 
     link(rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic")
 
-    script.
-      window['env'] = {"url":"https://dev.url.com"};
+    <script type="text/javascript">
+    | window['env'] = !{JSON.stringify(config.web.env)};
+    </script>
 
   body.skin-blue
     block content
 
-    script(type="text/javascript" src="assets/vendor/jquery-3.3.1.min.js")
-    script(type="text/javascript" src="assets/vendor/bootstrap-3.3.7/js/bootstrap.min.js")
-    script(type="text/javascript" src="assets/vendor/adminlte-2.4.5/js/adminlte.min.js")
+    script(type="text/javascript" src="/assets/vendor/jquery-3.3.1.min.js")
+    script(type="text/javascript" src="/assets/vendor/bootstrap-3.3.7/js/bootstrap.min.js")
+    script(type="text/javascript" src="/assets/vendor/adminlte-2.4.5/js/adminlte.min.js")
 
-    script(type="text/javascript" src="assets/build.js")
+    script(type="text/javascript" src=`/${config.web.manifest['build.js']}`)
